--- a/pages/compra.html
+++ b/pages/compra.html
@@ -5,15 +5,15 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Pilchas</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css">
-        <link rel="stylesheet" href="/css/compra.css">
+        <link rel="stylesheet" href="../css/compra.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Exile&family=Smooch+Sans:wght@100..900&display=swap" rel="stylesheet">
     </head>
     <body>
         <nav class="navbar navbar-expand-lg navbar-light">
-            <a href="/index.html" class="col-6">
-                <img src="/img/Logo PILCHAS.png" class="logo img-fluid">
+            <a href="../index.html" class="col-6">
+                <img src="../img/Logo PILCHAS.png" class="logo img-fluid">
             </a>
             <button class="navbar-toggler col-2" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -23,19 +23,19 @@
                 <form class="form-inline my-2 my-lg-0 col-8">
                     <input class="form-control rounded col-4" type="Buscar" placeholder="Buscar" aria-label="Buscar">
                     <button class="btn btn-warning col-1" type="submit">
-                        <img src="/img/lupa.png" class="lupa img-fluid">
+                        <img src="../img/lupa.png" class="lupa img-fluid">
                     </button>
                 </form>
                 <ul class="navbar-nav mr-auto ">
                     <li class="nav-item active row">
                         <a class="nav-link" href="#"> 
-                            <img src="/img/iconcuenta.png" class="iconcuenta img-fluid">
+                            <img src="../img/iconcuenta.png" class="iconcuenta img-fluid">
                             <span class="sr-only">(current)</span>
                         </a>
                     </li>
                     <li class="nav-item active row">
-                        <a class="nav-link" href="/pages/compra.html"> 
-                            <img src="/img/carrito.png" class="iconcuenta img-fluid">
+                        <a class="nav-link" href="../pages/compra.html"> 
+                            <img src="../img/carrito.png" class="iconcuenta img-fluid">
                             <span class="sr-only">(current)</span>
                         </a>
                     </li>
@@ -46,7 +46,7 @@
         <div class="carrito">
             <h2>Tu Carrito</h2>
             <div class="producto">
-                <img src="/img/Zapatilla Nike.png" class="col-2">
+                <img src="../img/Zapatilla Nike.png" class="col-2">
                 <div class="info col-8">
                     <h4>Air Max Pulse</h4>
                     <p>$ 249.000</p>
@@ -56,7 +56,7 @@
             </div>
 
             <div class="producto">
-                <img src="/img/Pantalón Nike Swoosh Hombre.png" class="col-2">
+                <img src="../img/Pantalón Nike Swoosh Hombre.png" class="col-2">
                 <div class="info col-8">
                     <h4>Pantalón Nike Swoosh Flc</h4>
                     <p>$ 164.999</p>
